# baml

./: .mise.toml  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: build-python-release.reusable.yaml  build-ruby-release.reusable.yaml  build-typescript-release.reusable.yaml  build-vscode-release.reusable.yaml  preview-docs.yml  primary.yml  release.yml
docs/: architecture.md  code-generation.md  coding-standards.md  debugging.md  design.md  performance.md  releasing.md  security.md  troubleshooting.md
engine/: Cargo.toml  README.md
engine/baml-lib/: README.md
engine/baml-lib/llm-client/: Cargo.toml  README.md
engine/baml-lib/llm-client/src/: clientspec.rs  lib.rs
engine/baml-lib/llm-client/src/clients/: anthropic.rs  aws_bedrock.rs  fallback.rs  google_ai.rs  helpers.rs  mod.rs  openai.rs  round_robin.rs  vertex.rs
engine/baml-runtime/: Cargo.toml  README.md  build.rs
engine/baml-schema-wasm/: Cargo.toml  README.md
engine/bstd/: README.md
engine/cli/: Cargo.toml  README.md
engine/language_client_codegen/: Cargo.toml  README.md
engine/language_client_python/: Cargo.toml  README.md  pyproject.toml
engine/language_client_python/python_src/baml_py/: internal_monkeypatch.py  type_builder.py
engine/language_client_python/src/: errors.rs  lib.rs  parse_py_type.rs  runtime.rs
engine/language_client_python/src/types/: audio.rs  client_registry.rs  function_result_stream.rs  function_results.rs  image.rs  lang_wrapper.rs  media_repr.rs  runtime_ctx_manager.rs  span.rs  type_builder.rs
engine/language_client_ruby/: README.md  baml.gemspec
engine/language_client_typescript/: README.md  async_context_vars.js  index.d.ts  index.d.ts.map  index.js  jest.config.js  native.d.ts  package.json  pnpm-lock.yaml
fern/: docs.yml
fern/pages/: changelog.mdx
fern/snippets/: finish-reason.mdx  role-selection.mdx
integ-tests/: README.md  baml-README.md  run-tests.sh
integ-tests/baml_src/: README.md  clients.baml  generators.baml
integ-tests/python/: README.md  pyproject.toml  report.html  (+2 more)
tools/: build  bump-version
typescript/: README.md  pnpm-lock.yaml
(+351 files in other folders)
