[package]
name = "baml-python-ffi"
edition = "2021"
version = "0.1.0"
authors.workspace = true
description = "BAML python bindings (Cargo.toml)"
license = "Apache-2.0"

[lib]
name = "baml_py"
crate-type = ["cdylib"]

[lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_must_use = "deny"
unused_variables = "deny"

[dependencies]
anyhow.workspace = true
baml-cli.workspace = true
baml-types.workspace = true
baml-runtime = { path = "../baml-runtime", default-features = false, features = [
  "internal",
] }
internal-baml-codegen.workspace = true
env_logger.workspace = true
futures.workspace = true
indexmap.workspace = true
log.workspace = true
# Consult https://pyo3.rs/main/migration for migration instructions
pyo3 = { version = "0.23.3", default-features = false, features = [
  "abi3-py38",
  "extension-module",
  "generate-import-lib",
  "serde",
] }
pyo3-async-runtimes = { version = "0.23", features = [
  "attributes",
  "tokio-runtime",
] }
pythonize = "0.23"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = [
  "json",
  "env-filter",
  "valuable",
] }

[build-dependencies]
pyo3-build-config = "0.21.2"
